# Pyraxt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  benchmark.sh  noxfile.py  pyproject.toml  setup.py
.claude/: settings.local.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md
.github/workflows/: codspeed.yml  preview-deployments.yml  python-CI.yml  release-CI.yml
.well-known/: funding-manifest-urls
axon/: __init__.py  __main__.py  argument_parser.py  authentication.py  axon.pyi  cli.py  dependency_injection.py  env_populator.py  openapi.py  processpool.py  reloader.py  responses.py  router.py  swagger.html  templating.py  ws.py
axon/scaffold/mongo/: app.py  (+1 more)
docs_src/: README.md
docs_src/public/: funding.json
integration_tests/: base_routes.py  conftest.py  index.py  openapi_config.json  test_app.py  test_cli.py  test_env_populator.py  test_get_requests.py  test_openapi.py  test_split_request_params.py  test_unsupported_types.py
integration_tests/helpers/: http_methods_helpers.py
integration_tests/subroutes/: __init__.py  di_subrouter.py
scripts/: format.sh
spec/: ACTOR_VS_STREAM_DEEP_DIVE.md  CHANNEL_VS_MAILBOX.md  IMPLEMENTATION_PLAN.md  MAILBOX_SYSTEM.md  actix-to-axum-migration.md
src/: lib.rs  server.rs
src/executors/: web_socket_executors.rs
src/io_helpers/: mod.rs
src/types/: headers.rs  mod.rs  request.rs  response.rs
src/websockets/: mod.rs  registry.rs
unit_tests/: test_request_object.py
(+62 files in other folders)
