[package]
name = "axon"
version = "0.65.0"
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
edition = "2021"
description = "Axon is a Super Fast Async Python Web Framework with a Rust runtime."
license = "BSD License (BSD)"
homepage = "https://github.com/sparckles/axon"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "axon"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.8.4"
tokio = { version = "1.26.0", features = ["full"] }
dashmap = "5.4.3"
anyhow = "1.0.69"
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "limit"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
futures = "0.3.27"
futures-util = "0.3.27"
matchit = "0.7.3"
socket2 = { version = "0.5.1", features = ["all"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
log = "0.4.17"
pythonize = "0.20.0"
serde = "1.0.187"
serde_json = "1.0.109"
once_cell = "1.8.0"
parking_lot = "0.12.3"

[features]
io-uring = ["tokio/io-uring"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[package.metadata.maturin]
name = "axon"
